--- a/memoria/anexos/diagramas_detallados.tex
+++ b/memoria/anexos/diagramas_detallados.tex
@@ -80,8 +80,8 @@
   \rowcolor{udcpink!25}
   \textbf{Nº} & \textbf{Funcionalidad} & \textbf{Est. (H)} & \textbf{Sprint} \\\hline
   1     &   Importar datos en formato DICOM en 3D Slicer    &   2     & 1 \\
-  2     &   Generar secciones para poder exportar de 3DSlicer &   40    & 1 \\
-  3     &   Arreglar el modelo para que sea viable para impresión &   12    & 1 \\
+  2     &   Generar secciones para exportación en 3DSlicer &   40    & 1 \\
+  3     &   Arreglar modelo (hacerlo viable para impresión) &   12    & 1 \\
   4     &   Imprimir modelo                                  &   15    & 1 \\
   5     &   Instalar librerías necesarias para el desarrollo &   4     & 2 \\
   6     &   Familiarizarse con la librería                   &   12    & 2 \\
@@ -104,6 +104,6 @@
   \multicolumn{2}{|c|}{\textbf{Total}} & \textbf{584} & \\
   \hline
   \end{tabular}
-  \caption{Tabla completa de tareas del proyecto con estimaciones detalladas y asignación a sprints.}
+  \caption{Tareas del proyecto con estimaciones detalladas y asignación a sprints.}
   \label{tab:tareas_completa}
 \end{table}
