--- a/memoria/bibliografia/acronimos.tex
+++ b/memoria/bibliografia/acronimos.tex
@@ -6,7 +6,8 @@
 \newacronym{erlang}{ERLANG/OTP}{Erlang Open Telecom Platform}
 \newacronym{hmd}{HMD}{Head Mounted Display}
 \newacronym{ide}{IDE}{Interactive Development Enviroment}
-\newacronym{tc}{TC}{Tomografía Computerizada}
+\newacronym[longplural={Tomografías Computerizadas}]{tc}{TC}{Tomografía Computerizada}
+\newacronym[longplural={Resonancias Magnéticas Nucleares}]{rmn}{RMN}{Resonancia Magnética Nuclear}
 \newacronym{citic}{CITIC}{Centro de Investigación en Tecnologías de la información y Comunicaciones}
 \newacronym{dvr}{DVR}{Direct Volume Rendering}
 \newacronym{mcrt}{MCRT}{Monte Carlo Ray Tracing}
