--- a/memoria/contido/estado_del_arte.tex
+++ b/memoria/contido/estado_del_arte.tex
@@ -1,6 +1,10 @@
 \chapter{Estado del Arte}
 \label{chap:ea}
-Este capítulo se centra en detallar el estado actual de las tecnologías utilizadas en el proyecto así como en analizar soluciones similares al proyecto.
+
+\lettrine{E}{l} constante progreso en medicina, y en particular los avances en imagen médica de los últimos 30 años \cite{Botha2014}, han llevado a la búsqueda de sistemas cada vez más avanzados para la representación y visualización de los datos obtenidos. Así, en las décadas de los 80 y 90 aparecen las primeras técnicas de \emph{render} volumétrico~\cite{levoy88} para la exploración de datos de \glspl{tc} y \glspl{rmn}, y también los primeros sistemas de \gls{vr} para cirurgía asistida por ordenador, muy costosos y bastante limitados \cite{satava93}. La primera década de los 2000, cuando aún no se había acuñado el término de \gls{xr}, consolida el uso de técnicas inmersivas para explorar volumes médicos \cite{Koning09}, sobre todo en diagnóstico y planificación quirúrgica, y de la \gls{ar} para cirurgía guiada por imagen \cite{Sielhorst2008}. El punto de inflexión en la explotación en medicina de las distintas aproximaciones para la visualización inmersiva englobadas dentro de lo que hoy se conoce como \acrfull{xr} no llega hasta bien entrada la década de 2010 \cite{Egger17, Venkatesan21}, años en los que se produce un salto tecnológico significativo en el hardware de \gls{vr}. En la actualidad, parte de la investigación se centra en mejorar la inmersión mediante un aumento del realismo, introduciendo técnicas como el \emph{path tracing} volumétrico~\cite{Taibo24}, y mejoras en la interacción.
+
+En este capítulo repasamos el estado actual de las tecnologías utilizadas en este proyecto, además de analizar las propuestas similares que hemos encontrado.
+
 \section{Visualización}
 Los componentes artificiales que deseamos incluir en las imágenes del mundo real proceden del framework desarrollado por \citeauthor{Kroes2012} que aplica técnicas de \acrfull{mcrt} sobre \acrfull{dvr}.
 El término \acrshort{dvr} se utiliza para referirse a las técnicas que producen una imagen directamente a partir de datos de un volumen, sin realizar pasos intermedios. Para que esto sea posible es necesario implementar modelos físicos que indiquen cómo se genera, refleja, dispersa u oculta la luz \cite{Max1995}. Estos modelos con el paso del tiempo han evolucionado en modelos más y más complejos que han probado ser beneficiosos para la visualización científica de modelos 3D \cite{Daz2015}, \cite{Englund2016}, \cite{Lindemann2011}.
@@ -23,4 +27,4 @@ Para este proyecto se escogieron las tecnologías E y G que se observan en la \f
 Destacar también la solución presentada por \cite{MoretaMartinez2020}. Este proyecto presenta un método para diseñar aplicaciones de realidad aumentada para la visualización de modelos anatómicos en 3 dimensiones mediante el uso de un marcador fiduciario. En él se explica un método para extraer una figura a partir de una \acrshort{tc}. Posteriormente, provee instrucciones detalladas para la impresión 3D del marcador fiduciario. Finalmente, utilizando la extensión de Vuforia para Unity crea una aplicación móvil que permite la visualización en realidad aumentada de la pieza.
 
 \section{Impresión 3D}
-En el estado actual de la tecnología de impresión 3D, se observan avances significativos en materiales biocompatibles y técnicas de impresión de alta resolución, que permiten la creación de modelos anatómicos precisos para aplicaciones médicas. Tecnologías emergentes como la impresión 3D de metales y resinas fotopolimerizables han revolucionado la producción de prótesis personalizadas y herramientas quirúrgicas, facilitando intervenciones más seguras y eficientes \cite{Gonzalez_Alvarez_2021}. Además, la integración con \acrfull{cad} y escaneo 3D ha permitido la fabricación de marcadores fiduciarios personalizados, esenciales para el registro en realidad aumentada, como se detalla en proyectos similares \cite{MoretaMartinez2020}. Estos desarrollos no solo han reducido costos y tiempos de producción, sino que también han expandido el acceso a tecnologías de vanguardia en entornos clínicos.
+En el estado actual de la tecnología de impresión 3D, se observan avances significativos en materiales biocompatibles y técnicas de impresión de alta resolución, que permiten la creación de modelos anatómicos precisos para aplicaciones médicas. Tecnologías emergentes como la impresión 3D de metales y resinas fotopolimerizables han revolucionado la producción de prótesis personalizadas y herramientas quirúrgicas, facilitando intervenciones más seguras y eficientes \cite{Gonzalez_Alvarez_2021}. Además, la integración con \gls{cad} y escaneo 3D ha permitido la fabricación de marcadores fiduciarios personalizados, esenciales para el registro en realidad aumentada, como se detalla en proyectos similares \cite{MoretaMartinez2020}. Estos desarrollos no solo han reducido costos y tiempos de producción, sino que también han expandido el acceso a tecnologías de vanguardia en entornos clínicos.
