--- a/memoria/contido/fundamentos_teoricos.tex
+++ b/memoria/contido/fundamentos_teoricos.tex
@@ -1,15 +1,21 @@
 \chapter{Fundamentos Teóricos y Técnológicos}
 \label{chap:ft}
+
+\glsreset{tc}
+\glsreset{xr}
+\glsreset{vr}
+\glsreset{ar}
+
 \lettrine{E}{n} este capítulo se repasan los principios básicos sobre los que se establece este trabajo.
 \section{Tomografía Computarizada}
 
-Una \acrfull{tc}, también conocida como escáner, es una técnica de
+Una \gls{tc}, también conocida como escáner, es una técnica de
 diagnóstico médico que utiliza rayos X, detectores y un ordenador para
 obtener imágenes detalladas de estructuras internas del cuerpo. La
-\acrshort{tc} combina una serie de imágenes radiográficas en secciones
+\gls{tc} combina una serie de imágenes radiográficas en secciones
 transversales para crear imágenes en 2D y 3D del área estudiada.
 
-Durante una \acrshort{tc}, el paciente se coloca en una mesa que se
+Durante una \gls{tc}, el paciente se coloca en una mesa que se
 desliza dentro de un dispositivo circular llamado tomógrafo. Un
 tomógrafo es, en esencia, una máquina de rayos X en la cual se ha
 sustituido la placa por una serie de
@@ -66,7 +72,7 @@ Esta técnica de fabricación presenta una serie de ventajas. La complejidad de 
 Otra de las ventajas es la posibilidad de generar prototipos de piezas cuyas versiones finales presentan un alto coste, por un precio muy reducido y una alta fidelidad, acelerando así el proceso iterativo del diseño.
 
 \paragraph{Modelado.}
-El proceso de impresión 3D comienza con el modelado de la pieza o producto que se desea imprimir. Este modelo puede crearse utilizando software \acrfull{cad} o mediante la digitalización de un objeto existente utilizando un escáner 3D. En nuestro caso, el modelo tridimensional se obtiene de la reconstrucción 3D a partir de una \acrshort{tc}.
+El proceso de impresión 3D comienza con el modelado de la pieza o producto que se desea imprimir. Este modelo puede crearse utilizando software \gls{cad} o mediante la digitalización de un objeto existente utilizando un escáner 3D. En nuestro caso, el modelo tridimensional se obtiene de la reconstrucción 3D a partir de una \acrshort{tc}.
 
 \paragraph{\emph{Slicing} (rebanado)}
 
@@ -77,7 +83,7 @@ El \emph{slicer} permite además realizar ajustes en el modelo 3D, con el fin de
 
 \section{Realidad Extendida}
 
-\acrfull{xr} es un término general que engloba todo el espectro de tecnologías inmersivas, incluyendo \acrfull{vr}, \acrfull{ar} y \acrfull{mr}. \acrshort{xr} se refiere a la fusión de los mundos físico y digital, creando un entorno inmersivo que puede incluir objetos virtuales, información digital y elementos del mundo real.
+\gls{xr} es un término general que engloba todo el espectro de tecnologías inmersivas, incluyendo \gls{vr}, \gls{ar} y \gls{mr}. \gls{xr} se refiere a la fusión de los mundos físico y digital, creando un entorno inmersivo que puede incluir objetos virtuales, información digital y elementos del mundo real.
 
 En 1994, \citeauthor{Milgram1994ATO}~\cite{Milgram1994ATO} acuñan el término de \emph{virtuality continuum}, que representa una escala que comprende desde la realidad física pura hasta la realidad virtual total, abarcando diferentes niveles de inmersión e interacción. Este \emph{continuum} describe así la gama completa de experiencias, desde la realidad física no modificada hasta entornos completamente virtuales, como se muestra en la \figurename~\ref{fig:vc}:
 \begin{itemize}
