--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -9,7 +9,7 @@
   doi = {10.1016/j.patcog.2014.01.005},
   url = {https://doi.org/10.1016/j.patcog.2014.01.005},
   year = {2014},
-  month = jun,
+  OPTmonth = jun,
   publisher = {Elsevier {BV}},
   volume = {47},
   number = {6},
@@ -30,7 +30,7 @@
   doi = {10.1007/s00330-012-2765-y},
   url = {https://doi.org/10.1007/s00330-012-2765-y},
   year = {2013},
-  month = jan,
+  OPTmonth = jan,
   publisher = {Springer Science and Business Media {LLC}},
   volume = {23},
   number = {6},
@@ -44,7 +44,7 @@
   doi = {10.1109/tvcg.2020.3037680},
   url = {https://doi.org/10.1109/tvcg.2020.3037680},
   year = {2022},
-  month = jul,
+  OPTmonth = jul,
   publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
   volume = {28},
   number = {7},
@@ -68,7 +68,7 @@
   doi = {10.1109/jdt.2008.2001575},
   url = {https://doi.org/10.1109/jdt.2008.2001575},
   year = {2008},
-  month = dec,
+  OPTmonth = dec,
   publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
   volume = {4},
   number = {4},
@@ -81,7 +81,7 @@
   doi = {10.1162/pres.1997.6.4.355},
   url = {https://doi.org/10.1162/pres.1997.6.4.355},
   year = {1997},
-  month = aug,
+  OPTmonth = aug,
   publisher = {{MIT} Press - Journals},
   volume = {6},
   number = {4},
@@ -95,18 +95,18 @@
   doi = {10.3791/60618},
   url = {https://doi.org/10.3791/60618},
   year = {2020},
-  month = jan,
+  OPTmonth = jan,
   publisher = {{MyJove} Corporation},
   number = {155},
   author = {Rafael Moreta-Martinez and David Garc{\'{\i}}a-Mato and M{\'{o}}nica Garc{\'{\i}}a-Sevilla and Rub{\'{e}}n P{\'{e}}rez-Ma{\~{n}}anes and Jos{\'{e}} A. Calvo-Haro and Javier Pascau},
-  title = {Combining Augmented Reality and 3D Printing to Display Patient Models on a Smartphone},
+  title = {Combining Augmented Reality and {3D} Printing to Display Patient Models on a Smartphone},
   journal = {Journal of Visualized Experiments}
 }
 @article{Kroes2012,
   doi = {10.1371/journal.pone.0038586},
   url = {https://doi.org/10.1371/journal.pone.0038586},
   year = {2012},
-  month = jul,
+  OPTmonth = jul,
   publisher = {Public Library of Science ({PLoS})},
   volume = {7},
   number = {7},
@@ -121,7 +121,7 @@
   doi = {10.1109/2945.468400},
   url = {https://doi.org/10.1109/2945.468400},
   year = {1995},
-  month = jun,
+  OPTmonth = jun,
   publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
   volume = {1},
   number = {2},
@@ -134,13 +134,13 @@
   doi = {10.1007/s00371-015-1151-6},
   url = {https://doi.org/10.1007/s00371-015-1151-6},
   year = {2015},
-  month = sep,
+  OPTmonth = sep,
   publisher = {Springer Science and Business Media {LLC}},
   volume = {33},
   number = {1},
   pages = {47--61},
   author = {Jose D{\'{\i}}az and Timo Ropinski and Isabel Navazo and Enrico Gobbetti and Pere-Pau V{\'{a}}zquez},
-  title = {An experimental study on the effects of shading in 3D perception of volumetric models},
+  title = {An experimental study on the effects of shading in {3D} perception of volumetric models},
   journal = {The Visual Computer}
 }
 
@@ -148,7 +148,7 @@
   doi = {10.1145/3002151.3002164},
   url = {https://doi.org/10.1145/3002151.3002164},
   year = {2016},
-  month = nov,
+  OPTmonth = nov,
   publisher = {{ACM}},
   author = {Rickard Englund and Timo Ropinski},
   title = {Evaluating the perception of semi-transparent structures in direct volume rendering techniques},
@@ -158,7 +158,7 @@
   doi = {10.1109/tvcg.2011.161},
   url = {https://doi.org/10.1109/tvcg.2011.161},
   year = {2011},
-  month = dec,
+  OPTmonth = dec,
   publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
   volume = {17},
   number = {12},
@@ -191,7 +191,7 @@
   doi = {10.1016/j.xcrm.2021.100348},
   url = {https://doi.org/10.1016/j.xcrm.2021.100348},
   year = {2021},
-  month = jul,
+  OPTmonth = jul,
   publisher = {Elsevier {BV}},
   volume = {2},
   number = {7},
@@ -202,7 +202,7 @@
 }
 
 @misc{yan_dong_su_han_song_wei_shi_2018, 
- title={A review of 3D printing technology for Medical Applications}, url={https://www.sciencedirect.com/science/article/pii/S2095809917306756},
+ title={A review of {3D} printing technology for Medical Applications}, url={https://www.sciencedirect.com/science/article/pii/S2095809917306756},
  journal={Engineering},
  publisher={Elsevier},
  author={Yan, Qian and Dong, Hanhua and Su, Jin and Han, Jianhua and Song, Bo and Wei, Qingsong and Shi, Yusheng},
@@ -213,13 +213,13 @@
   doi = {10.1016/j.injury.2016.08.027},
   url = {https://doi.org/10.1016/j.injury.2016.08.027},
   year = {2016},
-  month = nov,
+  OPTmonth = nov,
   publisher = {Elsevier {BV}},
   volume = {47},
   number = {11},
   pages = {2507--2511},
   author = {Francisco Chana-Rodr{\'{\i}}guez and Rub{\'{e}}n P{\'{e}}rez Ma{\~{n}}anes and Jos{\'{e}} Rojo-Manaute and Pablo Gil and Jos{\'{e}} Mar{\'{\i}}a Mart{\'{\i}}nez-G{\'{o}}miz and Javier Vaquero-Mart{\'{\i}}n},
-  title = {3D surgical printing and pre contoured plates for acetabular fractures},
+  title = {{3D} surgical printing and pre contoured plates for acetabular fractures},
   journal = {Injury}
 }
 
@@ -227,7 +227,7 @@
 	doi = {10.1108/rpj-08-2019-0208},
 	url = {https://doi.org/10.1108\%2Frpj-08-2019-0208},
 	year = 2021,
-	month = {jan},
+	OPTmonth = {jan},
 	publisher = {Emerald},
 	volume = {27},
 	number = {2},
@@ -251,7 +251,7 @@
   doi = {10.1007/s003300101100},
   url = {https://doi.org/10.1007/s003300101100},
   year = {2001},
-  month = sep,
+  OPTmonth = sep,
   publisher = {Springer Science and Business Media {LLC}},
   volume = {12},
   number = {4},
@@ -273,12 +273,12 @@
   doi = {10.1186/s41205-020-00091-4},
   url = {https://doi.org/10.1186/s41205-020-00091-4},
   year = {2021},
-  month = jan,
+  OPTmonth = jan,
   publisher = {Springer Science and Business Media {LLC}},
   volume = {7},
   number = {1},
   author = {Joshua V. Chen and Alan B. C. Dang and Alexis Dang},
-  title = {Comparing cost and print time estimates for six commercially-available 3D printers obtained through slicing software for clinically relevant anatomical models},
+  title = {Comparing cost and print time estimates for six commercially-available {3D} printers obtained through slicing software for clinically relevant anatomical models},
   journal = {3D Printing in Medicine}
 }
 @article{welch2020kalman,
@@ -290,7 +290,7 @@
   publisher={Springer}
 }
 @misc{mebius2007derivation,
-      title={Derivation of the Euler-Rodrigues formula for three-dimensional rotations from the general formula for four-dimensional rotations}, 
+      title={Derivation of the {Euler-Rodrigues} formula for three-dimensional rotations from the general formula for four-dimensional rotations}, 
       author={Johan Ernest Mebius},
       year={2007},
       eprint={math/0701759},
@@ -304,4 +304,71 @@
   year={1760},
   publisher={Sumptibus vidu{\ae} Eberhard Klett, Typis Christophori Petri Detleffsen},
   address={Augustae Vindelicorum}
+}
+
+@Article{levoy88,
+  author =       {Marc Levoy},
+  title =        {Display of surfaces from volume data},
+  journal =      {IEEE Computer Graphics and Applications},
+  year =         {1988},
+  volume =       {8},
+  number =       {3},
+  pages =        {29--37},
+  doi =          {10.1109/38.511},
+  url =          {https://doi.org/10.1109/38.511}
+}
+
+@Article{satava93,
+  author =       {Richard M. Satava},
+  title =        {Virtual reality surgical simulator. The first steps},
+  journal =      {Surgical endoscopy},
+  year =         {1993},
+  volume =       {7},
+  number =       {3},
+  pages =        {203--205},
+  doi =          {10.1007/BF00594110},
+  url =          {https://doi.org/10.1007/BF00594110},
+}
+
+@InBook{Koning09,
+  author =       {Anton H. J. Koning},
+  editor =       {Christoph W. Sensen and Benedikt Hallgrímsson},
+  title =        {Advanced Imaging in Biology and Medicine},
+  chapter =      {Volume Visualization Using Virtual Reality Medical Applications of Volume Rendering in Immersive Virtual Environments},
+  publisher =    {Springer},
+  year =         {2008},
+  doi =          {10.1007/978-3-540-68993-5_11},
+  url =          {https://doi.org/10.1007/978-3-540-68993-5_11}
+}
+
+@Article{Venkatesan21,
+  author =       {Mythreye Venkatesan and Harini Mohan and Justin R. Ryan and Christian M. Schürch and Garry P. Nolan and David H. Frakes and Ahmet F. Coskun},
+  title =        {Virtual and augmented reality for biomedical applications},
+  journal =      {Cell Reports Medicine},
+  year =         {2021},
+  volume =       {2},
+  number =       {7},
+  doi =          {10.1016/j.xcrm.2021.100348},
+  url =          {https://doi.org/10.1016/j.xcrm.2021.100348}
+}
+
+@Article{Egger17,
+  author =       {Jan Egger and Markus Gall and Jürgen Wallner and Pedro Boechat and Alexander Hann and Xing Li and Xiaojun Chen and Dieter Schmalstieg},
+  title =        {{HTC Vive MeVisLab} integration via {OpenVR} for medical applications},
+  journal =      {PloS one},
+  year =         {2017},
+  volume =       {12},
+  number =       {3},
+  doi =          {10.1371/journal.pone.0173972},
+  url =          {https://doi.org/10.1371/journal.pone.0173972}
+}
+
+@InProceedings{Taibo24,
+  author =       {Javier Taibo and Jose A. Iglesias-Guitian},
+  title =        {Immersive {3D} Medical Visualization in Virtual Reality using Stereoscopic Volumetric Path Tracing},
+  booktitle =    {IEEE Conference Virtual Reality and 3D User Interfaces (VR 2024)},
+  year =         {2024},
+  pages =        {1044-1053},
+  doi =          {10.1109/VR58804.2024.00123},
+  url =          {https://doi.org/10.1109/VR58804.2024.00123}
 }
