--- a/memoria/contido/metodologia_y_gestion_del_proyecto.tex
+++ b/memoria/contido/metodologia_y_gestion_del_proyecto.tex
@@ -8,7 +8,7 @@ Otro pilar en el que se basa esta metodología es la respuesta al cambio sobre l
 
 Dada la naturaleza incremental e iterativa de la metodología \textit{Ágile}, es posible dividir el ciclo de vida del proyecto en tareas para facilitar el desarrollo. Esta aproximación permite aplicar el principio de «Divide y Vencerás» fragmentando la estimación de las tareas y su desarrollo con el fin de reducir la dificultad en el desarrollo. 
 
-El proyecto se organizó en 21 tareas principales, agrupadas en 6 sprints, con una estimación total de 584 horas de trabajo. Destacar que dada la naturaleza del trabajo de fin de grado, se asume un único recurso humano, y por lo tanto no nos referiremos a las horas como horas por hombre o h × h. La tabla detallada de tareas con las estimaciones específicas se puede consultar en el Apéndice~\ref{chap:diagramas_detallados}.
+El proyecto se organizó en 21 tareas principales, agrupadas en 6 sprints, con una estimación total de 584 horas de trabajo. Destacar que dada la naturaleza del trabajo de fin de grado, se asume un único recurso humano, y por lo tanto no nos referiremos a las horas como horas por hombre o h × h. La tabla detallada de tareas con las estimaciones específicas se presenta en la \tablename~\ref{tab:tareas_completa}.
 
 Para llevar a cabo las tareas se optó por un desarrollo en \textit{sprints}. Los sprints son los períodos de tiempo en los que se llevan a cabo las tareas. Estos se acotaron en el tiempo, dándoles siempre una longitud determinada, y a su vez se acotaron en funcionalidad procurando siempre que finalicen alcanzando algún hito del proyecto. Estos bloques o \textit{sprints} se fueron definiendo a lo largo del proyecto, adaptándose a las necesidades y riesgos del mismo.
 
